Fix some UI (spacing on multifields, date format)

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,12 +29,16 @@ form textarea {
 input, textarea, .uneditable-input {
     width: 206px;
 }
+.input-append input,
 input.datepicker {
     width: 179px;
 }
 
 .nested-resource input.item-destroy {
   display: none;
+}
+.nested-resource-item {
+  padding-bottom: 12px;
 }
 
 .translation_missing {
